# pixel-pet

./: .gitignore  CONTRIBUTING.md  LICENSE  README.ja.md  README.md  SECURITY.md  index.html  package-lock.json  package.json  vite.config.ts
.github/workflows/: ci.yml  pages.yml  release.yml
assets/pets/cyber-cat/: README.ja.md  README.md  manifest.json  spritesheet.json
assets/pets/cyber-penguin/: README.ja.md  README.md  manifest.json  spritesheet.json
assets/pets/kofun-friend/: README.ja.md  README.md  SOURCE.md  manifest.json  spritesheet.json
docs/: ACTIVITY_HOOKS.ja.md  ACTIVITY_HOOKS.md  ARCHITECTURE.ja.md  ARCHITECTURE.md  ASSETS.ja.md  ASSETS.md  CAPSULE_SHARING.ja.md  CAPSULE_SHARING.md  RELEASE_BUILDS.ja.md  RELEASE_BUILDS.md  ROADMAP.ja.md  ROADMAP.md  UPDATER.ja.md  UPDATER.md
src/: main.ts  style.css
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/icons/: icon.icns
src-tauri/src/: main.rs
src/pet/: activity.ts  activityInbox.ts  activitySource.ts  ai.ts  capsule.ts  dialogue.ts  packs.ts  renderer.ts  state.ts
tests/: activity.test.ts  capsule.test.ts  dialogue.test.ts  packs.test.ts  state.test.ts
tools/: claude-code-activity-hook.mjs  generate-pixel-assets.mjs  validate-pet-packs.mjs  write-updater-manifest.mjs
