[package]
name = "pixel-pet"
version = "0.1.0"
description = "A lightweight cyberpunk pixel desktop pet."
authors = ["pixel-pet contributors"]
license = "MIT"
edition = "2021"
rust-version = "1.77.2"

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = ["macos-private-api", "tray-icon"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
